[gd_scene format=3 uid="uid://cp2n5wcln742p"]

[ext_resource type="PackedScene" uid="uid://l0xja4ems7yu" path="res://scenes/items/HealthItem.tscn" id="1"]
[ext_resource type="PackedScene" uid="uid://bme2pj2i5cdo5" path="res://scenes/items/EnergyItem.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://btah2q6fu5vgh" path="res://scenes/items/XPItem.tscn" id="3"]
[ext_resource type="PackedScene" path="res://scenes/items/CoinItem.tscn" id="4"]
[ext_resource type="FontFile" uid="uid://dwubil4canrne" path="res://assets/fonts/gemunu-libre-v8-latin-700.ttf" id="5"]
[ext_resource type="Script" uid="uid://c6o82o8u0lctj" path="res://scripts/ui/hud_overlay.gd" id="6"]
[ext_resource type="PackedScene" path="res://scenes/ui/NavButton.tscn" id="7"]
[ext_resource type="PackedScene" path="res://scenes/ui/PauseMenuPopup.tscn" id="8"]
[ext_resource type="Texture2D" uid="uid://c4hi1jgpf5nu7" path="res://assets/ui/amulets/Leap_Of_Faith_Amulet.png" id="13"]
[ext_resource type="Texture2D" uid="uid://b21h2rtgws7wf" path="res://assets/ui/weapons/Head_Spike_Weapon.png" id="14"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0.254902, 0.254902, 0.254902, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.254902, 0.737255, 0.737255, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="9"]
bg_color = Color(0.254902, 0.254902, 0.254902, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.254902, 0.737255, 0.737255, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="10"]
bg_color = Color(0.254902, 0.254902, 0.254902, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.254902, 0.737255, 0.737255, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="2"]
bg_color = Color(0.254902, 0.254902, 0.254902, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="3"]
bg_color = Color(0.5529412, 0.5529412, 0.5529412, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="4"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="5"]
bg_color = Color(0.5529412, 0.5529412, 0.5529412, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="6"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="7"]
bg_color = Color(0.5529412, 0.5529412, 0.5529412, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="8"]
bg_color = Color(0.7490196, 0.18431373, 0.6862745, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="HUD" type="CanvasLayer" unique_id=1783102352]
script = ExtResource("6")

[node name="LeftPanel" type="Panel" parent="." unique_id=1801817848]
visible = false
offset_left = 8.0
offset_top = 8.0
offset_right = 208.0
offset_bottom = 78.0
theme_override_styles/panel = SubResource("1")

[node name="RightPanel" type="Panel" parent="." unique_id=1552093256]
visible = false
offset_left = 436.0
offset_top = 8.0
offset_right = 632.0
offset_bottom = 80.0
theme_override_styles/panel = SubResource("1")

[node name="HealthItem" parent="." unique_id=610023548 instance=ExtResource("1")]
visible = false
position = Vector2(28, 28)

[node name="EnergyItem" parent="." unique_id=925709517 instance=ExtResource("2")]
visible = false
position = Vector2(28, 57.09601)

[node name="XpItem" parent="." unique_id=1154377571 instance=ExtResource("3")]
visible = false
position = Vector2(454, 28)

[node name="CoinItem" parent="." unique_id=1861734594 instance=ExtResource("4")]
position = Vector2(610.3433, 56.487)

[node name="CoinCountLabel" type="Label" parent="." unique_id=17759874]
offset_left = 489.67065
offset_top = 43.461
offset_right = 589.67065
offset_bottom = 70.461
theme_override_colors/font_color = Color(0.933333, 0.898039, 0.913725, 1)
theme_override_colors/font_outline_color = Color(0.79607844, 0.68235296, 0.14509805, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("5")
theme_override_font_sizes/font_size = 24
text = "10000"
horizontal_alignment = 2
vertical_alignment = 1

[node name="CommentaryPanel" type="Panel" parent="." unique_id=1610744071]
modulate = Color(1, 1, 1, 0)
offset_left = 221.0
offset_top = 8.0
offset_right = 417.0
offset_bottom = 44.0
pivot_offset = Vector2(98, 18)
theme_override_styles/panel = SubResource("9")

[node name="CommentaryEnergyItem" parent="CommentaryPanel" unique_id=1486838549 instance=ExtResource("2")]
position = Vector2(174.66324, 17.54871)
scale = Vector2(0.8, 0.8)

[node name="CommentaryLabel" type="Label" parent="CommentaryPanel" unique_id=214765294]
layout_mode = 0
offset_left = 25.51355
offset_top = 3.502304
offset_right = 173.51355
offset_bottom = 30.502304
theme_override_colors/font_color = Color(0.933333, 0.898039, 0.913725, 1)
theme_override_colors/font_outline_color = Color(0.254902, 0.737255, 0.737255, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("5")
theme_override_font_sizes/font_size = 24
text = "Nice Flips!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PauseButton" parent="." unique_id=2109780733 instance=ExtResource("7")]
custom_minimum_size = Vector2(0, 38)
offset_left = 589.588
offset_top = 77.58728
offset_right = 624.588
offset_bottom = 115.58728
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("10")
theme_override_styles/pressed = SubResource("10")
theme_override_styles/hover = SubResource("10")
theme_override_styles/disabled = SubResource("10")
text = "| |"

[node name="CompleteLevelTestButton" parent="." unique_id=40223270 instance=ExtResource("7")]
custom_minimum_size = Vector2(0, 32)
offset_left = 530.757
offset_top = 81.25493
offset_right = 580.757
offset_bottom = 113.25493
theme_override_font_sizes/font_size = 8
theme_override_styles/normal = SubResource("10")
theme_override_styles/pressed = SubResource("10")
theme_override_styles/hover = SubResource("10")
theme_override_styles/disabled = SubResource("10")
text = "COMPLETE"

[node name="PauseMenuPopup" parent="." unique_id=1674893631 instance=ExtResource("8")]

[node name="ConsumablePanel" type="Panel" parent="." unique_id=1632010254]
offset_left = 8.0
offset_top = 315.0
offset_right = 58.0
offset_bottom = 353.0
theme_override_styles/panel = SubResource("1")

[node name="ConsumableHealthItem" parent="ConsumablePanel" unique_id=1275499505 instance=ExtResource("1")]
position = Vector2(24.92266, 20)

[node name="ConsumableEnergyItem" parent="ConsumablePanel" unique_id=1577687636 instance=ExtResource("2")]
visible = false
position = Vector2(50, 20)

[node name="ConsumableCountLabel" type="Label" parent="ConsumablePanel" unique_id=1966424498]
layout_mode = 0
offset_left = 19.682484
offset_top = 14.119446
offset_right = 46.334175
offset_bottom = 41.119446
theme_override_colors/font_color = Color(0.933333, 0.898039, 0.913725, 1)
theme_override_colors/font_outline_color = Color(0.254902, 0.737255, 0.737255, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("5")
theme_override_font_sizes/font_size = 15
text = "0"
horizontal_alignment = 2
vertical_alignment = 1

[node name="EquippedAmuletsPanel" type="Panel" parent="." unique_id=2084601155]
offset_left = 22.499317
offset_top = 55.216156
offset_right = 166.49931
offset_bottom = 85.216156
theme_override_styles/panel = SubResource("1")

[node name="AmuletSlot1" type="TextureRect" parent="EquippedAmuletsPanel" unique_id=1786543211]
layout_mode = 0
offset_left = 8.0
offset_top = 2.0
offset_right = 72.0
offset_bottom = 66.0
scale = Vector2(0.4, 0.4)
texture = ExtResource("13")
stretch_mode = 5

[node name="AmuletSlot2" type="TextureRect" parent="EquippedAmuletsPanel" unique_id=1098765432]
layout_mode = 0
offset_left = 44.0
offset_top = 2.0
offset_right = 108.0
offset_bottom = 66.0
scale = Vector2(0.4, 0.4)
texture = ExtResource("13")
stretch_mode = 5

[node name="AmuletSlot3" type="TextureRect" parent="EquippedAmuletsPanel" unique_id=1098765433]
layout_mode = 0
offset_left = 80.0
offset_top = 2.0
offset_right = 144.0
offset_bottom = 66.0
scale = Vector2(0.4, 0.4)
texture = ExtResource("13")
stretch_mode = 5

[node name="AmuletsHudButton" type="Button" parent="EquippedAmuletsPanel" unique_id=192837465]
layout_mode = 0
offset_right = 144.0
offset_bottom = 30.0
focus_mode = 0
flat = true

[node name="WeaponSwitchPanel" type="Panel" parent="." unique_id=2084601156]
offset_left = 590.0
offset_top = 315.0
offset_right = 632.0
offset_bottom = 353.0
theme_override_styles/panel = SubResource("1")

[node name="WeaponIconBacking" type="ColorRect" parent="WeaponSwitchPanel" unique_id=2084601157]
layout_mode = 0
offset_left = 7.0
offset_top = 5.0
offset_right = 35.0
offset_bottom = 33.0
color = Color(0.11372549, 0.7019608, 0.48235294, 1)

[node name="WeaponIcon" type="TextureRect" parent="WeaponSwitchPanel" unique_id=2084601158]
layout_mode = 0
offset_left = 6.0
offset_top = 4.0
offset_right = 36.0
offset_bottom = 34.0
texture = ExtResource("14")
expand_mode = 1
stretch_mode = 5

[node name="HealthBarOutline" type="Panel" parent="." unique_id=1443374081]
offset_left = 18.056328
offset_top = 20.5
offset_right = 170.05634
offset_bottom = 34.5
theme_override_styles/panel = SubResource("2")

[node name="HealthBarBg" type="Panel" parent="." unique_id=302532238]
offset_left = 19.662758
offset_top = 22.5
offset_right = 167.66275
offset_bottom = 32.5
theme_override_styles/panel = SubResource("3")

[node name="HealthBarFill" type="Panel" parent="HealthBarBg" unique_id=1100578968]
modulate = Color(1, 0.56, 0.78, 1)
layout_mode = 0
offset_right = 148.0
offset_bottom = 10.0
theme_override_styles/panel = SubResource("4")

[node name="EnergyBarOutline" type="Panel" parent="." unique_id=224594350]
offset_left = 18.122341
offset_top = 38.0
offset_right = 170.12234
offset_bottom = 52.0
theme_override_styles/panel = SubResource("2")

[node name="EnergyBarBg" type="Panel" parent="." unique_id=1627373366]
offset_left = 20.05774
offset_top = 40.0
offset_right = 168.05774
offset_bottom = 50.0
theme_override_styles/panel = SubResource("5")

[node name="EnergyBarFill" type="Panel" parent="EnergyBarBg" unique_id=834906253]
modulate = Color(0.52, 0.86, 1, 1)
layout_mode = 0
offset_right = 148.0
offset_bottom = 10.0
theme_override_styles/panel = SubResource("6")

[node name="XpBarOutline" type="Panel" parent="." unique_id=117900956]
offset_left = 472.0
offset_top = 20.5
offset_right = 624.0
offset_bottom = 34.5
theme_override_styles/panel = SubResource("2")

[node name="XpBarBg" type="Panel" parent="." unique_id=1566333996]
offset_left = 474.0
offset_top = 22.5
offset_right = 622.0
offset_bottom = 32.5
theme_override_styles/panel = SubResource("7")

[node name="XpBarFill" type="Panel" parent="XpBarBg" unique_id=788402392]
layout_mode = 0
offset_bottom = 10.0
theme_override_styles/panel = SubResource("8")
